...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <Button
                    android:id="@+id/Edit_buttonId"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#000000"
                    android:text="Edit"
                    android:textColor="#FFFFFF"
                    android:drawableTop="@drawable/ic_baseline_edit_24" />

                <Button
                    android:id="@+id/DeleteBUttonId"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:backgroundTint="#000000"
                    android:text="Delete"
                    android:textColor="#FFFFFF"
                    android:drawableTop="@drawable/ic_baseline_delete_24" />
...
